src/patternfly/components/TreeView/tree-view.scss
/* ... */
.#{$tree-view}__list-item {
  .#{$tree-view}__list {
    display: none;
    opacity: var(--#{$tree-view}__list--Opacity);
    transition-timing-function: var(--#{$tree-view}__list--TransitionTimingFunction);
    transition-duration: var(--#{$tree-view}__list--TransitionDuration--fade), var(--#{$tree-view}__list--TransitionDuration--slide);
    transition-property: opacity, translate, display;
    transition-behavior: allow-discrete;
    translate: 0 var(--#{$tree-view}__list--TranslateY);

    &:where([hidden]) {
      display: flex;
    }
  }

  .#{$tree-view}__list-item {
    --#{$tree-view}__node-toggle-icon--Rotate: var(--#{$tree-view}__node-toggle-icon--base--Rotate); // reset nested toggle icon rotate
    --#{$tree-view}__node-toggle--Color: var(--#{$tree-view}__node-toggle--Color--base); // reset nested toggle color
  }

  &.pf-m-expanded {
    --#{$tree-view}__node-toggle--Color: var(--#{$tree-view}__list-item--m-expanded__node-toggle--Color);
    --#{$tree-view}__node-toggle-icon--Rotate: var(--#{$tree-view}__list-item--m-expanded__node-toggle-icon--Rotate);

    > .#{$tree-view}__list {
      display: revert;
      opacity: var(--#{$tree-view}--m-expanded__list--Opacity);
      transition-duration: var(--#{$tree-view}__list--TransitionDuration--expand--fade), var(--#{$tree-view}__list--TransitionDuration--expand--slide), var(--#{$tree-view}__list--TransitionDuration--expand--fade);
      translate: 0 var(--#{$tree-view}--m-expanded__list--TranslateY);

      @starting-style {
        --#{$tree-view}--m-expanded__list--Opacity: 0;
        --#{$tree-view}--m-expanded__list--TranslateY: -.5rem;
      }
    }
  }
}

.#{$tree-view}__node,
.#{$tree-view}__node-container {
  flex: 1 1;
  align-items: flex-start;
  min-width: 0;
  text-align: start;
  cursor: pointer;
  border: 0;
}

.#{$tree-view}__node {
  position: relative;
  display: flex;
  padding-block-start: var(--#{$tree-view}__node--PaddingBlockStart);
  padding-block-end: var(--#{$tree-view}__node--PaddingBlockEnd);
  padding-inline-start: var(--#{$tree-view}__node--PaddingInlineStart);
  padding-inline-end: var(--#{$tree-view}__node--PaddingInlineEnd);
  color: var(--#{$tree-view}__node--Color);
  background-color: var(--#{$tree-view}__node--BackgroundColor);

  &.pf-m-current {
    --#{$tree-view}__node--Color: var(--#{$tree-view}__node--m-current--Color);
  }

  .#{$tree-view}__node-count {
    margin-inline-start: var(--#{$tree-view}__node-count--MarginInlineStart);
  }
}

.#{$tree-view}__node-container {
  display: var(--#{$tree-view}__node-container--Display);
  flex-grow: 1;
  border-radius: var(--#{$tree-view}--m-compact__node-container--BorderRadius);
}

.#{$tree-view}__node-content {
  display: flex;
  flex-direction: column;
  overflow: var(--#{$tree-view}__node-content--Overflow);

  // row-gap: var(--#{$tree-view}__node-content--RowGap); update when gap for flex is supported
  > * + * {
    margin-block-start: var(--#{$tree-view}__node-content--RowGap);
  }
}

.#{$tree-view}__node-check {
  margin-inline-end: var(--#{$tree-view}__node-check--MarginInlineEnd);
}

// TODO - should this use the button component? It isn't always a <button> element, but should have the same layout whether it's a button or not
.#{$tree-view}__node-toggle {
  position: var(--#{$tree-view}__node-toggle--Position);
  inset-block-start: var(--#{$tree-view}__list-item__list-item__node-toggle--InsetBlockStart);
  inset-inline-start: var(--#{$tree-view}__list-item__list-item__node-toggle--InsetInlineStart);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-block-start: var(--#{$tree-view}__node-toggle--PaddingBlockStart);
  padding-block-end: var(--#{$tree-view}__node-toggle--PaddingBlockEnd);
  padding-inline-start: var(--#{$tree-view}__node-toggle--PaddingInlineStart);
  padding-inline-end: var(--#{$tree-view}__node-toggle--PaddingInlineEnd);
  margin-block-start: var(--#{$tree-view}__node-toggle--MarginBlockStart);
  margin-block-end: var(--#{$tree-view}__node-toggle--MarginBlockEnd);
  color: var(--#{$tree-view}__node-toggle--Color);
  background-color: var(--#{$tree-view}__node-toggle--BackgroundColor);
  border: 0;

  @include pf-v6-bidirectional-style(
    $prop: transform,
    $ltr-val: translateX(var(--#{$tree-view}__list-item__list-item__node-toggle--TranslateX)),
    $rtl-val: translateX(#{pf-v6-calc-inverse(var(--#{$tree-view}__list-item__list-item__node-toggle--TranslateX))})
  );
}

.#{$tree-view}__node-title,
.#{$tree-view}__node-text {
  &.pf-m-truncate {
    --#{$tree-view}__node-content--Overflow: hidden;

    @include pf-v6-text-overflow;
  }

  @at-root .#{$tree-view}.pf-m-truncate & {
    --#{$tree-view}__node-content--Overflow: hidden;

    @include pf-v6-text-overflow;
  }
}

.#{$tree-view}__node-text {
  @at-root label#{&} {
    cursor: pointer;
  }

  font-weight: inherit;
  color: inherit;
  text-align: start;
  background-color: transparent;
  border: 0;
}

.#{$tree-view}__node-title {
  font-weight: var(--#{$tree-view}__node-title--FontWeight);
}

.#{$tree-view}__search {
  padding-block-start: var(--#{$tree-view}__search--PaddingBlockStart);
  padding-block-end: var(--#{$tree-view}__search--PaddingBlockEnd);
  padding-inline-start: var(--#{$tree-view}__search--PaddingInlineStart);
  padding-inline-end: var(--#{$tree-view}__search--PaddingInlineEnd);
}

.#{$tree-view}__node-icon {
  padding-inline-end: var(--#{$tree-view}__node-icon--PaddingInlineEnd);
  color: var(--#{$tree-view}__node-icon--Color);
}

.#{$tree-view}__content {
  display: flex;
  align-items: center;
  background-color: var(--#{$tree-view}__content--BackgroundColor);
  border-radius: var(--#{$tree-view}__content--BorderRadius);
}

.#{$tree-view}__content:hover,
.#{$tree-view}__content:focus-within {
  background-color: var(--#{$tree-view}__node--hover--BackgroundColor);
}

.#{$tree-view}__action {
  margin-inline-end: var(--#{$tree-view}__action--MarginInlineEnd);
}
/* ... */

